Se mejoran las cargas asyncronas

--- a/annuals.html
+++ b/annuals.html
@@ -27,7 +27,8 @@
                 <div class="tarjet">
                     <h6>Matriculaciones por Año</h6>
                     <div class="chart-container-medium">
-                        <canvas id="annuals"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="annuals" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -36,7 +37,8 @@
                 <div class="tarjet">
                     <h6>Matriculaciones por Año (Acumuladas)</h6>
                     <div class="chart-container-medium">
-                        <canvas id="annualsacc"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="annualsacc" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -45,7 +47,8 @@
                 <div class="tarjet">
                     <h6>Diferenciales por Año anterior</h6>
                     <div class="chart-container-small">
-                        <canvas id="annualsdiff"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="annualsdiff" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -54,7 +57,8 @@
                 <div class="tarjet">
                     <h6>Diferenciales por Año anterior (Acumuladas)</h6>
                     <div class="chart-container-small">
-                        <canvas id="annualsaccdiff"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="annualsaccdiff" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
