--- a/propulsion.html
+++ b/propulsion.html
@@ -28,7 +28,8 @@
                 <div class="tarjet">
                     <h6>Acumulado de matriculaciones</h6>
                     <div class="chart-container-medium">
-                        <canvas id="motorTypesAcc"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="motorTypesAcc" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -36,7 +37,8 @@
                 <div class="tarjet">
                     <h6>Proporción por tipo de motor (%)</h6>
                     <div class="chart-container-medium">
-                        <canvas id="motorTypes100"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="motorTypes100" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -45,7 +47,8 @@
                 <div class="tarjet">
                     <h6>Comparativas anuales por tipo de motor</h6>
                     <div class="chart-container-small">
-                        <canvas id="motorTypesAnnualDiff"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="motorTypesAnnualDiff" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -53,7 +56,8 @@
                 <div class="tarjet">
                     <h5>Proporciones anuales por tipo de motor (%)</h5>
                     <div class="chart-container-small">
-                        <canvas id="motorTypesAnnualDiff100"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="motorTypesAnnualDiff100" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
