--- a/ranking.html
+++ b/ranking.html
@@ -29,8 +29,8 @@
                 <div class="tarjet">
                     <h6>Top matriculaciones por Marcas</h6>
                     <div class="chart-container-large">
-                        <img id="topBrandsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
-                        <canvas id="topBrands" style="display: none;"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="topBrands" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -38,8 +38,8 @@
                 <div class="tarjet">
                     <h6>Top matriculaciones por Modelos</h6>
                     <div class="chart-container-large">
-                        <img id="topModelsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
-                        <canvas id="topModels" style="display: none;"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="topModels" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -48,8 +48,8 @@
                 <div class="tarjet">
                     <h6>Matriculaciones acumuladas por Marcas</h6>
                     <div class="chart-container-medium">
-                        <img id="topBrandsAccLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
-                        <canvas id="topBrandsAcc" style="display: none;"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="topBrandsAcc" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -57,8 +57,8 @@
                 <div class="tarjet">
                     <h6>Matriculaciones acumuladas por Modelos</h6>
                     <div class="chart-container-medium">
-                        <img id="topModelsAccLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
-                        <canvas id="topModelsAcc" style="display: none;"></canvas>
+                        <img class="loadingTarjet" src="images/logo_gray.svg">
+                        <canvas id="topModelsAcc" class="loadedTarjet" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
