--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
                     Metricars
                 </a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" 
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="bi bi-list" style="font-size: 2rem; color: white;"></i>
                 </button>
                 
                 <!-- Menú desplegable collapse -->
