se añade lógica a la visibilidad de datos en Ranking

--- a/ranking.html
+++ b/ranking.html
@@ -25,26 +25,26 @@
         <h6 class="text-center">Las marcas y modelos más populares del mercado</h6>
         
         <div class="row mt-2">
-            <div class="col-12 col-lg-6 text-center">
+            <div id="topBrandsTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Top matriculaciones por Marcas</h6>
-                    <div class="chart-container-large">
+                    <div id="topBrandsTarjetChart" class="chart-container-large">
                         <img id="topBrandsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
                         <canvas id="topBrands" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 text-center">
+            <div id="topModelsTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Top matriculaciones por Modelos</h6>
-                    <div class="chart-container-large">
+                    <div id="topModelsTarjetChart" class="chart-container-large">
                         <img id="topModelsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
                         <canvas id="topModels" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 text-center">
+            <div id="topBrandsAccTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Matriculaciones acumuladas por Marcas</h6>
                     <div class="chart-container-medium">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 text-center">
+            <div id="topModelsAccTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Matriculaciones acumuladas por Modelos</h6>
                     <div class="chart-container-medium">
