Se define comportamiento personalizado a los anuales

--- a/annuals.html
+++ b/annuals.html
@@ -22,7 +22,7 @@
         <h5 class="text-center mt-2">Comparaciones anuales</h5>
         <h6 class="text-center">Observa y compara la evolución cada mes y cada año</h6>
         
-        <div class="row mt-2">
+        <div id="annualsTarjet" class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Matriculaciones por Año</h6>
@@ -32,7 +32,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 text-center">
+            <div id="annualsaccTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Matriculaciones por Año (Acumuladas)</h6>
                     <div class="chart-container-medium">
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 text-center">
+            <div id="annualsdiffTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Diferenciales por Año anterior</h6>
                     <div class="chart-container-small">
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 text-center">
+            <div id="annualsaccdiffTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h6>Diferenciales por Año anterior (Acumuladas)</h6>
                     <div class="chart-container-small">
