--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                             <select id="provinces" multiple>
                             </select>
                         </div>
+
+                        <!-- Acciones -->
+                        <div class="col-6 col-lg-3">
+                            <button id="restoreFilters" type="button" class="btn col-6 offset-6">Borrar
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
