Se actualizan titulos

--- a/annuals.html
+++ b/annuals.html
@@ -19,13 +19,14 @@
 </head>
 </body>
     <div>
-        <h5 class="text-center mt-2">Comparaciones anuales</h5>
-        <h6 class="text-center">Observa y compara la evolución cada mes y cada año</h6>
+        <h5 class="text-center mt-2">Comparativas anuales del mercado</h5>
+        <h6 class="text-center">Visualiza la evolución de matriculaciones entre distintos años y descubre patrones de crecimiento o caída</h6>
         
         <div id="annualsTarjet" class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Matriculaciones por Año</h6>
+                    <h6>Evolución mensual por año</h6>
+                    <span>Comparativa mensual de matriculaciones entre diferentes años</span>
                     <div class="chart-container-medium">
                         <canvas id="annuals"></canvas>
                     </div>
@@ -34,7 +35,8 @@
 
             <div id="annualsaccTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Matriculaciones por Año (Acumuladas)</h6>
+                    <h6>Cómo avanza cada año</h6>
+                    <span>Evolución acumulada de matriculaciones a lo largo de cada año</span>
                     <div class="chart-container-medium">
                         <canvas id="annualsacc"></canvas>
                     </div>
@@ -43,7 +45,8 @@
 
             <div id="annualsdiffTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Diferenciales por Año anterior</h6>
+                    <h6>El pulso mensual del mercado</h6>
+                    <span>Diferencia de matriculaciones cada mes frente al año anterior</span>
                     <div class="chart-container-small">
                         <canvas id="annualsdiff"></canvas>
                     </div>
@@ -52,7 +55,8 @@
 
             <div id="annualsaccdiffTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Diferenciales por Año anterior (Acumuladas)</h6>
+                    <h6>El pulso anual del mercado</h6>
+                    <span>Variación acumulada de matriculaciones frente años anteriores</span>
                     <div class="chart-container-small">
                         <canvas id="annualsaccdiff"></canvas>
                     </div>
