--- a/ranking.html
+++ b/ranking.html
@@ -21,13 +21,14 @@
 
 </body>
     <div>
-        <h5 class="text-center mt-2">Ranking de matriculaciones</h5>
-        <h6 class="text-center">Las marcas y modelos más populares del mercado</h6>
+        <h5 class="text-center mt-2">Marcas y modelos en cifras</h5>
+        <h6 class="text-center">Comparativa de las marcas y modelos ganadoras</h6>
         
         <div class="row mt-2">
             <div id="topBrandsTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Top matriculaciones por Marcas</h6>
+                    <h6>Las marcas con más matriculaciones</h6>
+                    <span>Ranking de matriculaciones de marcas</span>
                     <div id="topBrandsTarjetChart" class="chart-container-large">
                         <img id="topBrandsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
                         <canvas id="topBrands" style="display: none;"></canvas>
@@ -36,7 +37,8 @@
             </div>
             <div id="topModelsTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Top matriculaciones por Modelos</h6>
+                    <h6>Los modelos más populares</h6>
+                    <span>Ranking de matriculaciones de modelos</span>
                     <div id="topModelsTarjetChart" class="chart-container-large">
                         <img id="topModelsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
                         <canvas id="topModels" style="display: none;"></canvas>
@@ -46,7 +48,8 @@
 
             <div id="topBrandsAccTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Matriculaciones acumuladas por Marcas</h6>
+                    <h6>Cómo crecen las marcas líderes</h6>
+                    <span>Evolución mensual de las principales marcas</span>
                     <div class="chart-container-medium">
                         <img id="topBrandsAccLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
                         <canvas id="topBrandsAcc" style="display: none;"></canvas>
@@ -55,7 +58,8 @@
             </div>
             <div id="topModelsAccTarjet" class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Matriculaciones acumuladas por Modelos</h6>
+                    <h6>Evolución de los modelos estella</h6>
+                    <span>Evolución mensual de los principales modelos</span>
                     <div class="chart-container-medium">
                         <img id="topModelsAccLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
                         <canvas id="topModelsAcc" style="display: none;"></canvas>
