--- a/propulsion.html
+++ b/propulsion.html
@@ -20,13 +20,14 @@
 </head>
 <body>
     <div>
-        <h5 class="text-center mt-2">Matriculaciones por tipos de motor</h5>
-        <h6 class="text-center">Evolución de los tipos de motor de los vehículos</h6>
+        <h5 class="text-center mt-2">La batalla de los motores</h5>
+        <h6 class="text-center">Evolución y cuota de mercado de cada tipo de propulsión en las matriculaciones</h6>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Acumulado de matriculaciones</h6>
+                    <h6>Cómo crece cada tipo de motor</h6>
+                    <span>Evolución acumulada de matriculaciones según el tipo de propulsión</span>
                     <div class="chart-container-medium">
                         <canvas id="motorTypesAcc"></canvas>
                     </div>
@@ -34,7 +35,8 @@
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Proporción por tipo de motor (%)</h6>
+                    <h6>El peso de cada motor en el mercado</h6>
+                    <span>Evolución porcentual de motorización en el periodo seleccionado</span>
                     <div class="chart-container-medium">
                         <canvas id="motorTypes100"></canvas>
                     </div>
@@ -43,7 +45,8 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h6>Comparativas anuales por tipo de motor</h6>
+                    <h6>Matriculaciones anuales por tecnología de motor</h6>
+                    <span>Volumen total de matriculaciones de cada tipo de motor, año a año</span>
                     <div class="chart-container-small">
                         <canvas id="motorTypesAnnualDiff"></canvas>
                     </div>
@@ -51,7 +54,8 @@
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Proporciones anuales por tipo de motor (%)</h5>
+                    <h5>La cuota de mercado de cada motor</h5>
+                    <span>Participación porcentual de cada tipo de propulsión anualmente</span>
                     <div class="chart-container-small">
                         <canvas id="motorTypesAnnualDiff100"></canvas>
                     </div>
