Avances en tendencias de mercado

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#" onclick="loadPage('propulsion.html','propulsion.js')">Por tipos de motor</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="loadPage('trends.html','trends.js')">Tendencias del mercado</a>
+                        </li>
                     </ul>
                 </div>
             </div>
